--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+  display: flex;
+  margin: 40px;
+  min-height: calc(100vh - 80px);
+}
+
+.left {
+  background-color: darkslategray;
+  color: azure;
+}
+
+.right {
+  background-color: wheat;
+  color: firebrick;
 }
 
 .App-logo {
